--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -28,27 +28,29 @@
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
+					<li class="active"><a href="index.xhtml">Home</a></li>
+					
 					<li class="dropdown">
+					
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Orientação <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li><a href="#">Visualizar</a></li>
-							<li><a href="#">Cadastrar</a></li>
+							<li><a href="visualizarOrientacao.xhtml">Visualizar</a></li>
+							<li><a href="cadastroOrientacao.xhtml">Cadastrar</a></li>
 						</ul>
 					</li>
 					<li><a href="#contact">Contato</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li class="divider"></li>
-							<li class="dropdown-header">Nav header</li>
-							<li><a href="#">Separated link</a></li>
-							<li><a href="#">One more separated link</a></li>
-						</ul>
-					</li>
+<!-- 					<li class="dropdown"> -->
+<!-- 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a> -->
+<!-- 						<ul class="dropdown-menu" role="menu"> -->
+<!-- 							<li><a href="#">Action</a></li> -->
+<!-- 							<li><a href="#">Another action</a></li> -->
+<!-- 							<li><a href="#">Something else here</a></li> -->
+<!-- 							<li class="divider"></li> -->
+<!-- 							<li class="dropdown-header">Nav header</li> -->
+<!-- 							<li><a href="#">Separated link</a></li> -->
+<!-- 							<li><a href="#">One more separated link</a></li> -->
+<!-- 						</ul> -->
+<!-- 					</li> -->
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
