--- a/src/main/webapp/cadastroOrientacao.xhtml
+++ b/src/main/webapp/cadastroOrientacao.xhtml
@@ -10,112 +10,115 @@
 	<ui:define name="main-content">
 		<h1>Sistema de Orientação Acadêmica</h1>
 
-<p:panel id="panelOrientacao" rendered="#{orientacaoBean.renderedOrientacao}">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="form-group">
-					<h:form id="disciplinaForm">
-						<h:panelGrid style="margin: 0 auto; text-align:center;">
-							<p:outputLabel value="Buscar Disciplinas" />
-
-
-							<h:panelGrid columns="1" style="margin: 0 auto">
-								<p:inputText placeholder="Nome"
-									value="#{orientacaoBean.criteria.nome}"
-									styleClass="form-control" />
-
-
-								<p:inputText placeholder="Código"
-									value="#{orientacaoBean.criteria.codigo}"
-									styleClass="form-control"
-									style="margin-top: 20px; margin-bottom: 20px;" />
-
-
-							</h:panelGrid>
-							<h:commandButton action="#{orientacaoBean.pesquisar()}" 
-								update="orientacaoForm" styleClass="btn btn-lg btn-primary"
-								value="Pesquisar" />
-						</h:panelGrid>
-					</h:form>
-
-				</div>
-				<h:form id="orientacaoForm">
-
-					<div class="table table-striped">
-
-						<p:dataTable id="tableDisciplinaPesquisa" 
-							rendered="#{orientacaoBean.listaDisciplinas ne null}"
-							value="#{orientacaoBean.listaDisciplinas}" var="disciplina"
-							rows="7" paginator="true"
-							paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
-
-							<p:column>
-								<f:facet name="header"> Nome</f:facet>
-								<h:outputText value="#{disciplina.nome}" />
-							</p:column>
-							<p:column>
-								<f:facet name="header"> Codigo</f:facet>
-								<h:outputText value="#{disciplina.codigo}" />
-							</p:column>
-							<p:column>
-								<f:facet name="header"> Carga Horária</f:facet>
-								<h:outputText value="#{disciplina.cargaHoraria}" />
-							</p:column>
-							<p:column style="width: 50px">
-								<p:commandButton icon="ui-icon-plusthick"
-									style=" width: 30px; height: 30px;" update="orientacaoForm"
-									action="#{orientacaoBean.adicionarDisciplina(disciplina)}" />
-
-
-
-							</p:column>
-
-
-						</p:dataTable>
-					</div>
-
+		<p:panel id="panelOrientacao"
+			rendered="#{orientacaoBean.renderedOrientacao}">
+			<div class="row">
+				<div class="col-sm-12">
 					<div class="form-group">
-
-						<p:dataTable id="tableDisciplinaLista"
-							rendered="#{orientacaoBean.renderedListaDisciplinasSelecionadas}"
-							value="#{orientacaoBean.listaDisciplinasSelecionadas}"
-							var="disciplina">
-
-							<p:column>
-								<f:facet name="header"> Nome</f:facet>
-								<h:outputText value="#{disciplina.nome}" />
-							</p:column>
-							<p:column>
-								<f:facet name="header"> Codigo</f:facet>
-								<h:outputText value="#{disciplina.codigo}" />
-							</p:column>
-							<p:column>
-								<f:facet name="header"> Carga Horária</f:facet>
-								<h:outputText value="#{disciplina.cargaHoraria}" />
-							</p:column>
-							<p:column style="width: 50px">
-								<p:commandButton icon="ui-icon-plusthick"
-									update="orientacaoForm" style=" width: 30px; height: 30px;"
-									action="#{orientacaoBean.removerDisciplina(disciplina)}" />
+						<h:form id="disciplinaForm">
+							<h:panelGrid style="margin: 0 auto; text-align:center;">
+								<p:outputLabel value="Buscar Disciplinas" />
 
 
-							</p:column>
+								<h:panelGrid columns="1" style="margin: 0 auto">
+									<p:inputText placeholder="Nome"
+										value="#{orientacaoBean.criteria.nome}"
+										styleClass="form-control" />
 
 
-						</p:dataTable>
+									<p:inputText placeholder="Código"
+										value="#{orientacaoBean.criteria.codigo}"
+										styleClass="form-control"
+										style="margin-top: 20px; margin-bottom: 20px;" />
+
+
+								</h:panelGrid>
+								<h:commandButton action="#{orientacaoBean.pesquisar()}"
+									update="orientacaoForm" styleClass="btn btn-lg btn-primary"
+									value="Pesquisar" />
+							</h:panelGrid>
+						</h:form>
+
 					</div>
+					<h:form id="orientacaoForm">
 
-				
-				
-					<h:commandButton action="#{orientacaoBean.avancar()}" update="panelOrientacao"
-						styleClass="btn btn-lg btn-primary" value="Salvar">
+						<div class="table table-striped">
+
+							<p:dataTable id="tableDisciplinaPesquisa"
+								rendered="#{orientacaoBean.listaDisciplinas ne null}"
+								value="#{orientacaoBean.listaDisciplinas}" var="disciplina"
+								rows="7" paginator="true"
+								paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
+
+								<p:column>
+									<f:facet name="header"> Nome</f:facet>
+									<h:outputText value="#{disciplina.nome}" />
+								</p:column>
+								<p:column>
+									<f:facet name="header"> Codigo</f:facet>
+									<h:outputText value="#{disciplina.codigo}" />
+								</p:column>
+								<p:column>
+									<f:facet name="header"> Carga Horária</f:facet>
+									<h:outputText value="#{disciplina.cargaHoraria}" />
+								</p:column>
+								<p:column style="width: 50px">
+									<p:commandButton icon="ui-icon-plusthick"
+										style=" width: 30px; height: 30px;" update="orientacaoForm"
+										action="#{orientacaoBean.adicionarDisciplina(disciplina)}" />
+
+
+
+								</p:column>
+
+
+							</p:dataTable>
+						</div>
+
+						<div class="form-group">
+
+							<p:dataTable id="tableDisciplinaLista"
+								rendered="#{orientacaoBean.renderedListaDisciplinasSelecionadas}"
+								value="#{orientacaoBean.listaDisciplinasSelecionadas}"
+								var="disciplina">
+
+								<p:column>
+									<f:facet name="header"> Nome</f:facet>
+									<h:outputText value="#{disciplina.nome}" />
+								</p:column>
+								<p:column>
+									<f:facet name="header"> Codigo</f:facet>
+									<h:outputText value="#{disciplina.codigo}" />
+								</p:column>
+								<p:column>
+									<f:facet name="header"> Carga Horária</f:facet>
+									<h:outputText value="#{disciplina.cargaHoraria}" />
+								</p:column>
+								<p:column style="width: 50px">
+									<p:commandButton icon="ui-icon-plusthick"
+										update="orientacaoForm" style=" width: 30px; height: 30px;"
+										action="#{orientacaoBean.removerDisciplina(disciplina)}" />
+
+
+								</p:column>
+
+
+							</p:dataTable>
+						</div>
+
+
+
+						<h:commandButton action="#{orientacaoBean.avancar()}"
+							update="panelOrientacao" styleClass="btn btn-lg btn-primary"
+							value="Salvar">
 						</h:commandButton>
-				</h:form>
+					</h:form>
+				</div>
 			</div>
-		</div>
 		</p:panel>
-		
-		<p:outputLabel rendered="#{!orientacaoBean.renderedOrientacao}" value="Você já cadastrou sua orientação"/>
+
+		<p:outputLabel rendered="#{!orientacaoBean.renderedOrientacao}"
+			value="Você já cadastrou sua orientação" />
 	</ui:define>
 
 </ui:composition>
