--- a/src/main/webapp/orientacaoConfirmada.xhtml
+++ b/src/main/webapp/orientacaoConfirmada.xhtml
@@ -6,14 +6,16 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/template.xhtml">
-
 	<ui:define name="main-content">
-
-		<h1>Sistema de Orientação Acadêmica</h1>
-			<h2>Orientacao Cadastrada com Sucesso</h2>
-
+		<div class="content">
+			<div class="container">
+				<div class="main_user">
+					<span class="fonttres block">Pedido de orientação feito com sucesso!</span>
+					<span class="fontdois block">Seu pedido foi registrado. Aguarde o retorno de seu orientador.</span>	
+				</div>
+			</div>
+		</div>
 	</ui:define>
-
 </ui:composition>
 
 </html>
