--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,6 +4,10 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
+	
+<f:metadata>
+	<f:event type="preRenderView" listener="#{loginBean.verificarUsuarioLogado()}" />
+</f:metadata>
 
 <ui:composition template="/template.xhtml">
 
